--- a/package.json
+++ b/package.json
@@ -3,4 +3,7 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {}
+  "scripts": {
+    "start": "node index.js"
+}
 }
