--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ChatBox",
   "version": "0.0.1",
   "description": "my first socket.io app",
-  "dependencies": {}
+  "dependencies": {},
   "scripts": {
     "start": "node index.js"
 }
